--- a/calculatempg.html
+++ b/calculatempg.html
@@ -2,7 +2,7 @@
 <head>
    <meta charset="UTF-8">
    <title>Calculate Miles Per Gallon</title>
-   <script src = "mpg.js></script>
+   <script src = "mpg.js"></script>
 </head>
 <body>
    <section>
