--- a/resume.html
+++ b/resume.html
@@ -55,7 +55,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-light-blue"></i>Work Experience</h2>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Quality Assurance Intern | Husky Corp.</b></h5>
-          <h6 class="w3-text-light-blue"><i class="fa fa-calendar fa-fw w3-margin-right"></i>May 2018, Dec 2018, Aug 2020 - <span class="w3-tag w3-light-blue w3-round">Current</span></h6>
+          <h6 class="w3-text-light-blue"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Intermittent May 2018 - <span class="w3-tag w3-light-blue w3-round">Current</span></h6>
           <p>•	Assisted with collecting data and writing a report about the comparison of products made from different manufacturers</p>
 <p>•	Assisted the quality engineering department with conducting tests regarding quality control including hardness testing, safety break testing, and spring testing</p>
 <p>•	Worked with equipment to analyze measurements and tolerance values</p>
