--- a/carsales.html
+++ b/carsales.html
@@ -3,8 +3,8 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<title>Total Loan Cost</title>
-	<link rel="stylesheet" type="text/css" href="loan.css" />
-	<script type="text/javascript" src="loan1.js"></script>
+	<link rel="stylesheet" type="text/css" href="loan1.css" />
+	<script type="text/javascript" src="loan.js"></script>
 </head>
 
 <body>
