--- a/bad_income.html
+++ b/bad_income.html
@@ -6,7 +6,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>Income Tax Calculator</title>
     <link rel="stylesheet" type="text/css" href="bad_income.css" />
-    <script type="text/javascript" src="bad_income.js"></script>
+    <script type="text/javascript" src="badincome.js"></script>
 </head>
 
 <body>
